<resources>
    <string name="app_name">MTV : Message To Voice</string>
    <string name="tts_change">TTS 엔진 변경, 언어 변경, 읽어주는 속도와 목소리 톤 변경</string>
    <string name="tts_change_title">TTS 엔진 설정</string>
    <string name="tts_new_message">마지막 메세지</string>
    <string name="tts_message_text">메시지가 도착하지 않았습니다 </string>
    <string name="tts_off">메세지 읽기를 시작합니다</string>
    <string name="tts_on">메세지 읽기를 중단합니다</string>
    <string name="tts_default">권한이 설정되지 않았습니다</string>
    <string name="tts_permission_title">권한 설정</string>
    <string name="tts_permission">어플리케이션을 정상적으로 작동시키 위한 권한 설정</string>
    <string name="tts_help_title">도움말</string>
    <string name="tts_help">어플리케이션 사용법을 확인합니다</string>
    <string name="help_main">Message to Voice는 문자 메세지와 카카오톡의 메세지를 음성으로\n출력시키는 어플리케이션입니다.\n\n사용방법은 다음과 같습니다.\n\n<b>1.기능을 시작하기 전에 먼저 권한들을 설정해야 합니다.\n\n</b>먼저, 왼쪽 위의 톱니바퀴 아이콘을 눌러 설정으로 이동하십시오.\n
        \n<b>2.권한 설정 버튼과 알림 엑세스 설정 버튼을 눌러 권한을 설정해주십시오.</b>\n\n만약, 권한들을 설정하지 않는다면 메세지를 읽는 기능이 \n정상적으로 작동하지 않으니 반드시 권한을 설정해주시기 바랍니다.\n\n<b>3.권한들을 설정 한 다음 메인 화면에 오른쪽 화살표 버튼을 눌러\n기능을 활성화 시키십시오.</b>\n\n<b>4.기능을 중지하려면 멈춤 버튼을 눌러 기능을 중지하십시오.</b>\n\n<b>5.말의 빠르기나 음을 바꾸고 싶으시면 설정에서 TTS 엔진 설정 버튼을 눌러서 바꾸십시오.</b>
        \n\n만약 TTS엔진의 변경을 원하신다면 버튼을 누르신 후 보이는 페이지에서 변경이 가능합니다. <b>하지만 변경을 추천드리진 않습니다.</b>\n\n\n
    </string>
    <string name="notification_title">알림 액세스 설정</string>
    <string name="notification">카카오톡의 내용을 가져오기 위한 액세스 설정</string>
</resources>
