<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/btn1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/selectableItemBackground"
    tools:context=".setDisplay">

    <Button
        android:id="@+id/changeTTS"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="410dp"
        android:layout_height="59dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="91dp"
        android:layout_marginEnd="0dp"
        android:background="?android:selectableItemBackground"
        android:gravity="top|left"
        android:text="@string/tts_change_title"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <TextView
        style="@style/CustomTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="-5dp"
        android:layout_marginTop="192dp"
        android:layout_marginEnd="10dp"
        android:background="@android:color/transparent"
        android:gravity="bottom|left"
        android:text="@string/tts_permission"
        android:textColor="@android:color/black"
        android:textSize="14sp" />

    <Button
        android:id="@+id/permission_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="410dp"
        android:layout_height="61dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="-10dp"
        android:background="?android:selectableItemBackground"
        android:gravity="top|left"
        android:text="@string/tts_permission_title"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <TextView
        style="@style/CustomTextView"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="-5dp"
        android:layout_marginTop="122dp"
        android:layout_marginEnd="10dp"
        android:background="@android:color/transparent"
        android:gravity="bottom|left"
        android:text="@string/tts_change"
        android:textColor="@android:color/black"
        android:textSize="14sp" />

    <Button
        android:id="@+id/help"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="410dp"
        android:layout_height="58dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="231dp"
        android:layout_marginEnd="0dp"
        android:background="?android:selectableItemBackground"
        android:gravity="top|left"
        android:text="@string/tts_help_title"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/interval3"
        android:layout_width="450dp"
        android:layout_height="10dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="-5dp"
        android:layout_marginTop="221dp"
        android:layout_marginEnd="-10dp"
        android:background="#0D000000" />

    <TextView
        android:id="@+id/TextView"
        style="@style/CustomTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="-5dp"
        android:layout_marginTop="261dp"
        android:layout_marginEnd="73dp"
        android:background="@android:color/transparent"
        android:gravity="bottom|left"
        android:text="@string/tts_help"
        android:textColor="@android:color/black"
        android:textSize="14sp" />

    <Button
        android:id="@+id/interval"
        android:layout_width="450dp"
        android:layout_height="10dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-5dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="-10dp"
        android:background="#0D000000" />

    <ImageButton
        android:id="@+id/back2main"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="19dp"
        android:background="@android:color/transparent"
        android:padding="0dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/back" />

    <TextView
        android:id="@+id/back2mainText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="19dp"
        android:textColor="@android:color/black"
        android:text="설정" />

    <Button
        android:id="@+id/interval2"
        android:layout_width="421dp"
        android:layout_height="0.1dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="-10dp"
        android:background="#0D000000" />

    <Button
        android:id="@+id/interval4"
        android:layout_width="450dp"
        android:layout_height="10dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="-6dp"
        android:layout_marginTop="288dp"
        android:layout_marginEnd="-10dp"
        android:background="#0D000000" />

    <TextView
        android:id="@+id/notification_text"
        style="@style/CustomTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/notification"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="-5dp"
        android:layout_marginTop="330dp"
        android:layout_marginEnd="73dp"
        android:layout_marginBottom="7dp"
        android:background="@android:color/transparent"
        android:gravity="bottom|left"
        android:text="@string/notification"
        android:textColor="@android:color/black"
        android:textSize="14sp" />

    <Button
        android:id="@+id/interval5"
        android:layout_width="450dp"
        android:layout_height="10dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="-7dp"
        android:layout_marginTop="357dp"
        android:layout_marginEnd="-10dp"
        android:background="#0D000000" />

    <Button
        android:id="@+id/notification"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="298dp"
        android:layout_marginEnd="0dp"
        android:background="?android:selectableItemBackground"
        android:gravity="top|left"
        android:text="@string/notification_title"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

</RelativeLayout>